# SideStory-CNN-Image-Filter

./: .gitignore  fw.py  main.py  pyproject.toml
cli/: commands.py  config.py
configs/: infer.toml  train.toml
data/: README.md
nn_filter/: checkpoint.py  checkpoint_resolution.py  config.py  data_setup.py  dataset.py  infer.py  infer_setup.py  io_utils.py  loader_utils.py  metrics.py  model.py  onnx_export.py  onnx_export_setup.py  plotting.py  runs.py  runtime.py  status.py  status_ui.py  train.py  training_setup.py  ui.py  validation.py
