[project]
name = "hznu-os-ex4-nn"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
    "onnx>=1.19.1",
    "onnxruntime>=1.23.2",
    "onnxscript>=0.6.2",
    "pillow>=12.2.0",
    "plotly>=6.5.0",
    "rich>=15.0.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = ["ruff>=0.15.10", "ty>=0.0.29"]

# formatter + linter
[tool.ruff]
line-length = 80
target-version = 'py312'

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "SIM", "TID", "PL", "RUF"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "lf"
